# CargoTrace

./: Cargo.toml  README.md  SETUP_INSTRUCTIONS.md  canister_ids.json  cargo_trace_backend.did  dfx.json  package-lock.json  package.json  setup.sh
src/CargoTrace_backend/: Cargo.toml
src/CargoTrace_frontend/: package.json
src/cargo_trace_backend/: Cargo.toml  cargo_trace_backend.did
src/cargo_trace_backend/src/: cargowatcher.rs  cargox_watcher.rs  files.rs  lib.rs  loan.rs  loans.rs  login.rs  oloan.rs
src/cargo_trace_backend/src/tests/: pocketic_tests.rs
src/cargo_trace_frontend/: index.html  package.json  tailwind.config.js  vite.config.js  vite.config.js.timestamp-1757762783178-4ac452e5c4ca6.mjs
src/cargo_trace_frontend/src/: App.jsx  auth.js  index.css  index.scss  main.jsx
src/cargo_trace_frontend/src/components/admin/: AdminHeader.jsx  AdminSidebar.jsx
src/cargo_trace_frontend/src/components/layout/: BottomToggle.jsx  DashboardHeader.jsx  DashboardSidebar.jsx  Footer.jsx  Navbar.jsx  NewFooter.jsx  NewFooter.module.css  NewNavbar.jsx  NewNavbar.module.css
src/cargo_trace_frontend/src/components/sections/: About.jsx  CTA.jsx  CustomsIntegration.jsx  CustomsIntegrationSafe.jsx  CustomsIntegrationSimple.jsx  DashboardDocuments.jsx  DashboardHome.jsx  DashboardLoans.jsx  DashboardRepayment.jsx  Features.jsx  Hero.jsx  Hero.module.css  (+11 more)
src/cargo_trace_frontend/src/context/: AuthContext.jsx
src/cargo_trace_frontend/src/hooks/: useScrollAnimation.js
src/cargo_trace_frontend/src/pages/: Admin.jsx  Dashboard.jsx  DocumentVerification.jsx  Home.jsx  Login.jsx  NewLanding.jsx  NewLanding.module.css  upload.jsx
src/cargo_trace_frontend/src/services/: backendService.js
src/cargo_trace_frontend/src/styles/: admin-content.css  admin-header.css  admin-sidebar.css  admin.css  base.css  main.css
watcher/: lastBlock.txt  package-lock.json  package.json  testWs.js  watcher.js  watcher2.js
(+29 files in other folders)
