[package]
name = "cargo_trace_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-macros = "0.13"
ic-cdk-timers = "0.4"
ic-ledger-types = "0.11"
ic-stable-structures = "0.7.0"
num-bigint = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
[patch.crates-io]
ic-ledger-types = { version = "0.11" }
bincode = "1.3"  # Optional, for to_bytes/from_bytes
serde_json = "1.0"
anyhow = "1.0"
[dependencies.getrandom]
version = "0.2"
features = ["custom"]
pocket-ic = "3.0.0"

